--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tasks</h1>
+<h1>Tareas</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Description</th>
-      <th>Deadline</th>
+      <th>Descripción</th>
+      <th>Fecha</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New Task', new_task_path %>
+<%= link_to 'Nueva Tarea', new_task_path, remote: true %>
+<div id="task-form" style="display:none;"></div>
