--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Task</h1>
+<h1>Nueva Tarea</h1>
 
-<%= render 'form', task: @task %>
+<%= render 'form' %>
 
 <%= link_to 'Back', tasks_path %>
