--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,5 +1,5 @@
 <li>
   <%= task.description %>
   <%= task.deadline %>
-  <%= link_to "Edit", edit_task_path(task), remote: true %>
+  <%= link_to "Editar", edit_task_path(task), remote: true %>
 </li>
