--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -2,4 +2,6 @@
   <%= task.description %>
   <%= task.deadline %>
   <%= link_to "Editar", edit_task_path(task), remote: true %>
+  <%= link_to "Eliminar", task, remote: true, method: :delete,
+        data: { confirm: '¿Estás segur@?' } %>
 </li>
